Fix card title overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -66,11 +66,22 @@ body {
   flex: 0 1 350px;
   margin: 10px 10px;
   .card-title {
-    height: 25px;
+    height: 50px;
     margin: 0;
-    vertical-align: middle;
     a {
       color: #495057;
+      div {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+  }
+  .card-body {
+    padding: 10px;
+    img {
+      margin-bottom: 10px;
     }
   }
 }
